--- a/content/projects.html
+++ b/content/projects.html
@@ -46,8 +46,7 @@
     }
 
     header p {
-      font-size: 1.2rem;
-      color: var(--secondary-color);
+      text-align: center;
     }
 
     .projects-container {
@@ -189,6 +188,16 @@
       display: table;
       clear: both;
     }
+
+    .container.page {
+      max-width: 80%;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    p{
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -214,7 +223,7 @@
         </ul>
       </div>
       <div class="links">
-        🔗 <a href="https://github.com/Pinkbro05/LLM-Hallucination-Mitigation">GitHub Repository</a>
+        🔗 <a href="https://github.com/khangdzox/COS30018-Mitigate-Hallucination">GitHub Repository</a>
       </div>
     </div>
 
