modify projects page

--- a/content/projects.html
+++ b/content/projects.html
@@ -242,8 +242,11 @@
         </ul>
       </div>
     </div>
+    <div class="links">
+      🔗 <a href="https://github.com/PinkBro05/Melbourne-House-Market-AI-Driven">GitHub Repository</a>
+    </div>
   </div>
-
+  
   <h2 class="section-title">Other Projects</h2>
   <div class="projects-container">
     <div class="project-card">
@@ -258,6 +261,9 @@
           <li>Implemented PyTorch-based Transformer models</li>
           <li>Explored advanced optimization techniques: ROBE, Mixture of Experts (MoE), synthetic data generation</li>
         </ul>
+      </div>
+      <div class="links">
+        🔗 <a href="https://github.com/PinkBro05/Blog-title-classification-using-transformer">GitHub Repository</a>
       </div>
     </div>
 
@@ -274,17 +280,6 @@
           <li>Conducted feature engineering for complex market analysis</li>
           <li>Applied interdisciplinary approach combining finance and AI</li>
         </ul>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <h3>AI-Driven Market Analysis Tool</h3>
-      <div class="role"><strong>Tech Stack:</strong> Python, TensorFlow, pandas, plotly</div>
-      <div class="description">
-        <p>A machine learning system that analyzes financial market data to identify patterns and predict potential market movements. The system incorporates sentiment analysis from financial news and social media.</p>
-      </div>
-      <div class="links">
-        <a href="https://github.com/Pinkbro05/market-analysis">View on GitHub</a>
       </div>
     </div>
 
